Add view active den list

--- a/romfs/i18n/en.json
+++ b/romfs/i18n/en.json
@@ -11,7 +11,8 @@
     "Raid Pokemon": "Raid Pokemon",
     "Box": "Box",
     "Slot": "Slot",
-    "Party": "Party"
+    "Party": "Party",
+    "Den List": "Den List"
   },
   "natures": {
     "0": "Hardy",
