--- a/romfs/i18n/fr.json
+++ b/romfs/i18n/fr.json
@@ -11,7 +11,8 @@
     "Raid Pokemon": "Raid Pokemon",
     "Box": "Boîte",
     "Slot": "Fente",
-    "Party": "Fête"
+    "Party": "Fête",
+    "Den List": "Liste de repaire"
   },
   "natures": {
     "0": "Hardi",
