Translate stars and den list

--- a/romfs/i18n/en.json
+++ b/romfs/i18n/en.json
@@ -12,7 +12,8 @@
     "Box": "Box",
     "Slot": "Slot",
     "Party": "Party",
-    "Den List": "Den List"
+    "Den List": "Den List",
+    "Stars": "Stars"
   },
   "natures": {
     "0": "Hardy",
