--- a/romfs/i18n/fr.json
+++ b/romfs/i18n/fr.json
@@ -12,7 +12,8 @@
     "Box": "Boîte",
     "Slot": "Fente",
     "Party": "Fête",
-    "Den List": "Liste de repaire"
+    "Den List": "Liste de repaire",
+    "Stars": "Étoiles"
   },
   "natures": {
     "0": "Hardi",
