Show and hide PID and EC

--- a/romfs/i18n/fr.json
+++ b/romfs/i18n/fr.json
@@ -2,6 +2,8 @@
   "app": {
     "PSV": "PSV",
     "TSV": "TSV",
+    "PID": "PID",
+    "EC": "EC",
     "Shiny": "Brillant",
     "Not Shiny": "Pas Brillant",
     "Nature": "La Nature",
