--- a/romfs/i18n/en.json
+++ b/romfs/i18n/en.json
@@ -2,6 +2,8 @@
   "app": {
     "PSV": "PSV",
     "TSV": "TSV",
+    "PID": "PID",
+    "EC": "EC",
     "Shiny": "Shiny",
     "Not Shiny": "Not Shiny",
     "Nature": "Nature",
