Show extra info instructions

--- a/romfs/i18n/en.json
+++ b/romfs/i18n/en.json
@@ -15,7 +15,8 @@
     "Slot": "Slot",
     "Party": "Party",
     "Den List": "Den List",
-    "Stars": "Stars"
+    "Stars": "Stars",
+    "More detail (X), Go back (B)": "More detail (X), Go back (B)"
   },
   "natures": {
     "0": "Hardy",
