--- a/romfs/i18n/fr.json
+++ b/romfs/i18n/fr.json
@@ -15,7 +15,8 @@
     "Slot": "Fente",
     "Party": "Fête",
     "Den List": "Liste de repaire",
-    "Stars": "Étoiles"
+    "Stars": "Étoiles",
+    "More detail (X), Go back (B)": "Plus de détails (X), Retourner (B)"
   },
   "natures": {
     "0": "Hardi",
