Update French translations thanks to @RichardPaulAstley

--- a/CaptureSight/romfs/i18n/fr.json
+++ b/CaptureSight/romfs/i18n/fr.json
@@ -4,21 +4,21 @@
     "TSV": "TSV",
     "PID": "PID",
     "EC": "EC",
-    "Shiny": "Brillant",
-    "Not Shiny": "Pas Brillant",
-    "Nature": "La Nature",
+    "Shiny": "Shiny",
+    "Not Shiny": "Non Shiny",
+    "Nature": "Nature",
     "Wild Pokemon": "Pokémon Sauvage",
-    "Box Pokemon": "Boîte Pokemon",
+    "Box Pokemon": "Boîtes PCA",
     "Party Pokemon": "Party Pokemon",
     "Raid Pokemon": "Raid Pokemon",
     "Box": "Boîte",
-    "Slot": "Fente",
-    "Party": "Fête",
-    "Active Den List": "Liste des repaires actifs",
-    "All Dens List": "Liste de toutes les densités",
+    "Slot": "Emplacement",
+    "Party": "Equipe",
+    "Active Den List": "Liste des Antres actifs",
+    "All Dens List": "Liste de tous les antres",
     "Stars": "Étoiles",
-    "More detail (X), Go back (B)": "Plus de détails (X), Retourner (B)",
-    "Den Id": "Den Id"
+    "More detail (X), Go back (B)": "Plus d'informations (X), Retour (B)",
+    "Den Id": "ID de l'Antre"
   },
   "natures": {
     "0": "Hardi",
@@ -50,22 +50,22 @@
   "moves": {
     "0": "―――――",
     "1": "Écras’Face",
-    "2": "Poing-Karaté",
+    "2": "Poing Karaté",
     "3": "Torgnoles",
     "4": "Poing Comète",
     "5": "Ultimapoing",
     "6": "Jackpot",
-    "7": "Poing de Feu",
-    "8": "Poing-Glace",
-    "9": "Poing-Éclair",
+    "7": "Poing Feu",
+    "8": "Poing Glace",
+    "9": "Poing Éclair",
     "10": "Griffe",
     "11": "Force Poigne",
     "12": "Guillotine",
     "13": "Coupe-Vent",
-    "14": "Danse-Lames",
+    "14": "Danse Lames",
     "15": "Coupe",
     "16": "Tornade",
-    "17": "Cru-Aile",
+    "17": "Cru-Ailes",
     "18": "Cyclone",
     "19": "Vol",
     "20": "Étreinte",
@@ -89,7 +89,7 @@
     "38": "Damoclès",
     "39": "Mimi-Queue",
     "40": "Dard-Venin",
-    "41": "Double-Dard",
+    "41": "Double Dard",
     "42": "Dard-Nuée",
     "43": "Groz’Yeux",
     "44": "Morsure",
@@ -97,7 +97,7 @@
     "46": "Hurlement",
     "47": "Berceuse",
     "48": "Ultrason",
-    "49": "Sonicboom",
+    "49": "Sonic Boom",
     "50": "Entrave",
     "51": "Acide",
     "52": "Flammèche",
@@ -119,7 +119,7 @@
     "68": "Riposte",
     "69": "Frappe Atlas",
     "70": "Force",
-    "71": "Vol-Vie",
+    "71": "Vole-Vie",
     "72": "Méga-Sangsue",
     "73": "Vampigraine",
     "74": "Croissance",
@@ -128,13 +128,13 @@
     "77": "Poudre Toxik",
     "78": "Para-Spore",
     "79": "Poudre Dodo",
-    "80": "Danse-Fleur",
+    "80": "Danse Fleurs",
     "81": "Sécrétion",
     "82": "Draco-Rage",
-    "83": "Danse Flamme",
+    "83": "Danse Flammes",
     "84": "Éclair",
     "85": "Tonnerre",
-    "86": "Cage-Éclair",
+    "86": "Cage Éclair",
     "87": "Fatal-Foudre",
     "88": "Jet-Pierres",
     "89": "Séisme",
@@ -169,7 +169,7 @@
     "118": "Métronome",
     "119": "Mimique",
     "120": "Destruction",
-    "121": "Bomb’Œuf",
+    "121": "Bombe Œuf",
     "122": "Léchouille",
     "123": "Purédpois",
     "124": "Détritus",
@@ -223,7 +223,7 @@
     "172": "Roue de Feu",
     "173": "Ronflement",
     "174": "Malédiction",
-    "175": "Fléau",
+    "175": "Gigotage",
     "176": "Conversion 2",
     "177": "Aéroblast",
     "178": "Spore Coton",
@@ -236,17 +236,17 @@
     "185": "Feinte",
     "186": "Doux Baiser",
     "187": "Cognobidon",
-    "188": "Bomb-Beurk",
+    "188": "Bombe Beurk",
     "189": "Coud’Boue",
     "190": "Octazooka",
     "191": "Picots",
     "192": "Élecanon",
     "193": "Clairvoyance",
-    "194": "Prélèvem. Destin",
+    "194": "Lien du Destin",
     "195": "Requiem",
     "196": "Vent Glace",
     "197": "Détection",
-    "198": "Charge-Os",
+    "198": "Charge Os",
     "199": "Verrouillage",
     "200": "Colère",
     "201": "Tempête de Sable",
@@ -259,7 +259,7 @@
     "208": "Lait à Boire",
     "209": "Étincelle",
     "210": "Taillade",
-    "211": "Aile d’Acier",
+    "211": "Ailes d’Acier",
     "212": "Regard Noir",
     "213": "Attraction",
     "214": "Blabla Dodo",
@@ -271,9 +271,9 @@
     "220": "Balance",
     "221": "Feu Sacré",
     "222": "Ampleur",
-    "223": "Dynamopoing",
+    "223": "Dynamo-Poing",
     "224": "Mégacorne",
-    "225": "Dracosouffle",
+    "225": "Draco-Souffle",
     "226": "Relais",
     "227": "Encore",
     "228": "Poursuite",
@@ -286,7 +286,7 @@
     "235": "Synthèse",
     "236": "Rayon Lune",
     "237": "Puissance Cachée",
-    "238": "Coup-Croix",
+    "238": "Coup Croix",
     "239": "Ouragan",
     "240": "Danse Pluie",
     "241": "Zénith",
@@ -315,11 +315,11 @@
     "264": "Mitra-Poing",
     "265": "Stimulant",
     "266": "Par Ici",
-    "267": "Force-Nature",
+    "267": "Force Nature",
     "268": "Chargeur",
     "269": "Provoc",
     "270": "Coup d’Main",
-    "271": "Tourmagik",
+    "271": "Tour de Magie",
     "272": "Imitation",
     "273": "Vœu",
     "274": "Assistance",
@@ -342,11 +342,11 @@
     "291": "Plongée",
     "292": "Cogne",
     "293": "Camouflage",
-    "294": "Lumiqueue",
+    "294": "Lumi-Queue",
     "295": "Lumi-Éclat",
     "296": "Ball’Brume",
-    "297": "Danse-Plume",
-    "298": "Danse-Folle",
+    "297": "Danse Plumes",
+    "298": "Danse Folle",
     "299": "Pied Brûleur",
     "300": "Lance-Boue",
     "301": "Ball’Glace",
@@ -370,7 +370,7 @@
     "319": "Strido-Son",
     "320": "Siffl’Herbe",
     "321": "Chatouille",
-    "322": "Force Cosmik",
+    "322": "Force Cosmique",
     "323": "Giclédo",
     "324": "Rayon Signal",
     "325": "Poing Ombre",
@@ -381,12 +381,12 @@
     "330": "Ocroupi",
     "331": "Balle Graine",
     "332": "Aéropique",
-    "333": "Stalagtite",
+    "333": "Stalactite",
     "334": "Mur de Fer",
     "335": "Barrage",
     "336": "Grondement",
-    "337": "Dracogriffe",
-    "338": "Végé-Attak",
+    "337": "Draco-Griffe",
+    "338": "Végé-Attaque",
     "339": "Gonflette",
     "340": "Rebond",
     "341": "Tir de Boue",
@@ -396,13 +396,13 @@
     "345": "Feuille Magik",
     "346": "Tourniquet",
     "347": "Plénitude",
-    "348": "Lame-Feuille",
+    "348": "Lame Feuille",
     "349": "Danse Draco",
     "350": "Boule Roc",
     "351": "Onde de Choc",
     "352": "Vibraqua",
-    "353": "Carnareket",
-    "354": "Psycho Boost",
+    "353": "Vœu Destructeur",
+    "354": "Psycho-Boost",
     "355": "Atterrissage",
     "356": "Gravité",
     "357": "Œil Miracle",
@@ -449,15 +449,15 @@
     "398": "Direct Toxik",
     "399": "Vibrobscur",
     "400": "Tranche-Nuit",
-    "401": "Hydroqueue",
+    "401": "Hydro-Queue",
     "402": "Canon Graine",
     "403": "Lame d’Air",
-    "404": "Plaie-Croix",
+    "404": "Plaie Croix",
     "405": "Bourdon",
-    "406": "Dracochoc",
-    "407": "Dracocharge",
+    "406": "Draco-Choc",
+    "407": "Draco-Charge",
     "408": "Rayon Gemme",
-    "409": "Vampipoing",
+    "409": "Vampi-Poing",
     "410": "Onde Vide",
     "411": "Exploforce",
     "412": "Éco-Sphère",
@@ -482,16 +482,16 @@
     "431": "Escalade",
     "432": "Anti-Brume",
     "433": "Distorsion",
-    "434": "Draco Météore",
+    "434": "Draco-Météore",
     "435": "Coup d’Jus",
     "436": "Ébullilave",
     "437": "Tempête Verte",
     "438": "Mégafouet",
     "439": "Roc-Boulet",
-    "440": "Poison-Croix",
+    "440": "Poison Croix",
     "441": "Détricanon",
     "442": "Tête de Fer",
-    "443": "Bombaimant",
+    "443": "Bombe Aimant",
     "444": "Lame de Roc",
     "445": "Séduction",
     "446": "Piège de Roc",
@@ -509,7 +509,7 @@
     "458": "Coup Double",
     "459": "Hurle-Temps",
     "460": "Spatio-Rift",
-    "461": "Danse-Lune",
+    "461": "Danse Lune",
     "462": "Presse",
     "463": "Vortex Magma",
     "464": "Trou Noir",
@@ -542,7 +542,7 @@
     "491": "Bombe Acide",
     "492": "Tricherie",
     "493": "Rayon Simple",
-    "494": "Ten-danse",
+    "494": "Ten-Danse",
     "495": "Après Vous",
     "496": "Chant Canon",
     "497": "Écho",
@@ -561,7 +561,7 @@
     "510": "Calcination",
     "511": "À la Queue",
     "512": "Acrobatie",
-    "513": "Copie Type",
+    "513": "Copie-Type",
     "514": "Vengeance",
     "515": "Tout ou Rien",
     "516": "Passe-Cadeau",
@@ -582,7 +582,7 @@
     "531": "Crève-Cœur",
     "532": "Encornebois",
     "533": "Lame Sainte",
-    "534": "Coquilame",
+    "534": "Coqui-Lame",
     "535": "Tacle Feu",
     "536": "Phytomixeur",
     "537": "Bulldoboule",
@@ -617,7 +617,7 @@
     "566": "Hantise",
     "567": "Halloween",
     "568": "Râle Mâle",
-    "569": "DélugePlasmique",
+    "569": "Déluge Plasmique",
     "570": "Parabocharge",
     "571": "Maléfice Sylvain",
     "572": "Tempête Florale",
@@ -661,14 +661,14 @@
     "610": "Retenue",
     "611": "Harcèlement",
     "612": "Poing Boost",
-    "613": "Mort-Ailes",
+    "613": "Mort’Ailes",
     "614": "Myria-Flèches",
     "615": "Myria-Vagues",
     "616": "Force Chtonienne",
     "617": "Lumière du Néant",
     "618": "Onde Originelle",
     "619": "Lame Pangéenne",
-    "620": "Draco Ascension",
+    "620": "Draco-Ascension",
     "621": "Furie Dimension",
     "622": "Turbo-Charge Bulldozer",
     "623": "Turbo-Charge Bulldozer",
@@ -716,7 +716,7 @@
     "665": "Marteau de Glace",
     "666": "Soin Floral",
     "667": "Cavalerie Lourde",
-    "668": "Vol-Force",
+    "668": "Vole-Force",
     "669": "Lame Solaire",
     "670": "Feuillage",
     "671": "Projecteur",
@@ -756,7 +756,7 @@
     "705": "Canon Floral",
     "706": "Psycho-Croc",
     "707": "Trépignement",
-    "708": "Os’Ombre",
+    "708": "Os Ombre",
     "709": "Vif Roc",
     "710": "Aqua-Brèche",
     "711": "Laser Prisme",
@@ -776,7 +776,75 @@
     "725": "Rayons Séléno-Explosifs",
     "726": "Patati-Patattrape",
     "727": "Hurlement des Roches-Lames",
-    "728": "Dracacophonie Flamboyante"
+    "728": "Dracacophonie Flamboyante",
+    "729": "Pika-Sprint",
+    "730": "Pika-Splash",
+    "731": "Pika-Piqué",
+    "732": "Pika-Fracas",
+    "733": "Évo-Thalasso",
+    "734": "Évo-Dynamo",
+    "735": "Évo-Flambo",
+    "736": "Évo-Psycho",
+    "737": "Évo-Ténébro",
+    "738": "Évo-Écolo",
+    "739": "Évo-Congélo",
+    "740": "Évo-Fabulo",
+    "741": "Évo-Chardasso",
+    "742": "Écrous d’Poing",
+    "743": "Gardomax",
+    "744": "Canon Dynamax",
+    "745": "Tir de Précision",
+    "746": "Croque Fort",
+    "747": "Garde-à-Joues",
+    "748": "Ultime Bastion",
+    "749": "Goudronnage",
+    "750": "Poudre Magique",
+    "751": "Draco-Flèches",
+    "752": "Thérémonie",
+    "753": "Octoprise",
+    "754": "Prise de Bec",
+    "755": "Branchicrok",
+    "756": "Change-Côté",
+    "757": "Pyromax",
+    "758": "Insectomax",
+    "759": "Fulguromax",
+    "760": "Normalomax",
+    "761": "Pugilomax",
+    "762": "Spectromax",
+    "763": "Cryomax",
+    "764": "Toxinomax",
+    "765": "Hydromax",
+    "766": "Aéromax",
+    "767": "Enchantomax",
+    "768": "Dracomax",
+    "769": "Psychomax",
+    "770": "Lithomax",
+    "771": "Sismomax",
+    "772": "Sinistromax",
+    "773": "Phytomax",
+    "774": "Métallomax",
+    "775": "Dracacophonie",
+    "776": "Big Splash",
+    "777": "Nappage",
+    "778": "Tambour Battant",
+    "779": "Troquenard",
+    "780": "Ballon Brûlant",
+    "781": "Gladius Maximus",
+    "782": "Aegis Maxima",
+    "783": "Roue Libre",
+    "784": "Abattage",
+    "785": "Tapotige",
+    "786": "Overdrive",
+    "787": "Acide Malique",
+    "788": "Force G",
+    "789": "Choc Émotionnel",
+    "790": "Vapeur Féérique",
+    "791": "Fontaine de Vie",
+    "792": "Blocage",
+    "793": "Fourbette",
+    "794": "Joute Astrale",
+    "795": "Laser Infinimax",
+    "796": "Métalaser"
   },
   "species": {
     "0": "Œuf",
@@ -1586,6 +1654,89 @@
     "804": "Mandrillon",
     "805": "Ama-Ama",
     "806": "Pierroteknik",
-    "807": "Zeraora"
+    "807": "Zeraora",
+    "808": "Meltan",
+    "809": "Melmetal",
+    "810": "Ouistempo",
+    "811": "Badabouin",
+    "812": "Gorythmic",
+    "813": "Flambino",
+    "814": "Lapyro",
+    "815": "Pyrobut",
+    "816": "Larméléon",
+    "817": "Arrozard",
+    "818": "Lézargus",
+    "819": "Rongourmand",
+    "820": "Rongrigou",
+    "821": "Minisange",
+    "822": "Bleuseille",
+    "823": "Corvaillus",
+    "824": "Larvadar",
+    "825": "Coléodôme",
+    "826": "Astronelle",
+    "827": "Goupilou",
+    "828": "Roublenard",
+    "829": "Tournicoton",
+    "830": "Blancoton",
+    "831": "Moumouton",
+    "832": "Moumouflon",
+    "833": "Khélocrok",
+    "834": "Torgamord",
+    "835": "Voltoutou",
+    "836": "Fulgudog",
+    "837": "Charbi",
+    "838": "Wagomine",
+    "839": "Monthracite",
+    "840": "Verpom",
+    "841": "Pomdrapi",
+    "842": "Dratatin",
+    "843": "Dunaja",
+    "844": "Dunaconda",
+    "845": "Nigosier",
+    "846": "Embrochet",
+    "847": "Hastacuda",
+    "848": "Toxizap",
+    "849": "Salarsen",
+    "850": "Grillepattes",
+    "851": "Scolocendre",
+    "852": "Poulpaf",
+    "853": "Krakos",
+    "854": "Théffroi",
+    "855": "Polthégeist",
+    "856": "Bibichut",
+    "857": "Chapotus",
+    "858": "Sorcilence",
+    "859": "Grimalin",
+    "860": "Fourbelin",
+    "861": "Angoliath",
+    "862": "Ixon",
+    "863": "Berserkatt",
+    "864": "Corayôme",
+    "865": "Palarticho",
+    "866": "M. Glaquette",
+    "867": "Tutétékri",
+    "868": "Crèmy",
+    "869": "Charmilly",
+    "870": "Hexadron",
+    "871": "Wattapik",
+    "872": "Frissonille",
+    "873": "Beldeneige",
+    "874": "Dolman",
+    "875": "Bekaglaçon",
+    "876": "Wimessir",
+    "877": "Morpeko",
+    "878": "Charibari",
+    "879": "Pachyradjah",
+    "880": "Galvagon",
+    "881": "Galvagla",
+    "882": "Hydragon",
+    "883": "Hydragla",
+    "884": "Duralugon",
+    "885": "Fantyrm",
+    "886": "Dispareptil",
+    "887": "Lanssorien",
+    "888": "Zacian",
+    "889": "Zamazenta",
+    "890": "Éthernatos"
   }
 }
