Show trade Pokemon - thanks to @wwwwwwzx

--- a/CaptureSight/romfs/i18n/en.json
+++ b/CaptureSight/romfs/i18n/en.json
@@ -18,7 +18,9 @@
     "All Dens List": "All Dens List",
     "Stars": "Stars",
     "More detail (X), Go back (B)": "More detail (X), Go back (B)",
-    "Den Id": "Den Id"
+    "Den Id": "Den Id",
+    "Wild and Trade Pokemon": "Wild and Trade Pokemon",
+    "Trade Pokemon": "Trade Pokemon"
   },
   "natures": {
     "0": "Hardy",
