Check for dmnt:cht and swsh running

--- a/CaptureSight/romfs/i18n/en.json
+++ b/CaptureSight/romfs/i18n/en.json
@@ -23,7 +23,9 @@
     "Trade Pokemon": "Trade Pokemon",
     "Minted Nature": "Minted Nature",
     "IVs": "IVs",
-    "EVs": "EVs"
+    "EVs": "EVs",
+    "Atmosphere's dmnt:cht is not running": "Atmosphere's dmnt:cht is not running",
+    "Please start a Pokemon game before running CaptureSight": "Please start a Pokemon game before running CaptureSight"
   },
   "natures": {
     "0": "Hardy",
