Show header in den menu

--- a/CaptureSight/romfs/i18n/fr.json
+++ b/CaptureSight/romfs/i18n/fr.json
@@ -30,7 +30,8 @@
     "Egg cycles": "Nombre de cycles",
     "Frame": "Frame",
     "No raid seed found!  This may not be a raid Pokemon": "Aucune Raid Seed n'a été trouvée ! Ce n'est peut-être pas un Pokemon de Raid",
-    "Flawless IVs": "IVs Parfaits"
+    "Flawless IVs": "IVs Parfaits",
+    "Voir les prochaines frames (A)": "View upcoming frames (A)"
   },
   "natures": {
     "0": "Hardi",
