--- a/CaptureSight/romfs/i18n/en.json
+++ b/CaptureSight/romfs/i18n/en.json
@@ -30,7 +30,8 @@
     "Egg cycles": "Egg cycles",
     "Frame": "Frame",
     "No raid seed found!  This may not be a raid Pokemon": "No raid seed found!  This may not be a raid Pokemon",
-    "Flawless IVs": "Flawless IVs"
+    "Flawless IVs": "Flawless IVs",
+    "View upcoming frames (A)": "View upcoming frames (A)"
   },
   "natures": {
     "0": "Hardy",
