Add ability to Pokemon Summary screen

--- a/CaptureSight/romfs/i18n/fr.json
+++ b/CaptureSight/romfs/i18n/fr.json
@@ -1751,5 +1751,266 @@
     "888": "Zacian",
     "889": "Zamazenta",
     "890": "Éthernatos"
+  },
+  "ability": {
+    "0": "-",
+    "1": "Puanteur",
+    "2": "Crachin",
+    "3": "Turbo",
+    "4": "Armurbaston",
+    "5": "Fermeté",
+    "6": "Moiteur",
+    "7": "Échauffement",
+    "8": "Voile Sable",
+    "9": "Statik",
+    "10": "Absorbe-Volt",
+    "11": "Absorbe-Eau",
+    "12": "Benêt",
+    "13": "Ciel Gris",
+    "14": "Œil Composé",
+    "15": "Insomnia",
+    "16": "Homochromie",
+    "17": "Vaccin",
+    "18": "Torche",
+    "19": "Écran Poudre",
+    "20": "Tempo Perso",
+    "21": "Ventouse",
+    "22": "Intimidation",
+    "23": "Marque Ombre",
+    "24": "Peau Dure",
+    "25": "Garde Mystik",
+    "26": "Lévitation",
+    "27": "Pose Spore",
+    "28": "Synchro",
+    "29": "Corps Sain",
+    "30": "Médic Nature",
+    "31": "Paratonnerre",
+    "32": "Sérénité",
+    "33": "Glissade",
+    "34": "Chlorophylle",
+    "35": "Lumiattirance",
+    "36": "Calque",
+    "37": "Coloforce",
+    "38": "Point Poison",
+    "39": "Attention",
+    "40": "Armumagma",
+    "41": "Ignifu-Voile",
+    "42": "Magnépiège",
+    "43": "Anti-Bruit",
+    "44": "Cuvette",
+    "45": "Sable Volant",
+    "46": "Pression",
+    "47": "Isograisse",
+    "48": "Matinal",
+    "49": "Corps Ardent",
+    "50": "Fuite",
+    "51": "Regard Vif",
+    "52": "Hyper Cutter",
+    "53": "Ramassage",
+    "54": "Absentéisme",
+    "55": "Agitation",
+    "56": "Joli Sourire",
+    "57": "Plus",
+    "58": "Moins",
+    "59": "Météo",
+    "60": "Glu",
+    "61": "Mue",
+    "62": "Cran",
+    "63": "Écaille Spéciale",
+    "64": "Suintement",
+    "65": "Engrais",
+    "66": "Brasier",
+    "67": "Torrent",
+    "68": "Essaim",
+    "69": "Tête de Roc",
+    "70": "Sécheresse",
+    "71": "Piège Sable",
+    "72": "Esprit Vital",
+    "73": "Écran Fumée",
+    "74": "Force Pure",
+    "75": "Coque Armure",
+    "76": "Air Lock",
+    "77": "Pieds Confus",
+    "78": "Motorisé",
+    "79": "Rivalité",
+    "80": "Impassible",
+    "81": "Rideau Neige",
+    "82": "Gloutonnerie",
+    "83": "Colérique",
+    "84": "Délestage",
+    "85": "Ignifugé",
+    "86": "Simple",
+    "87": "Peau Sèche",
+    "88": "Télécharge",
+    "89": "Poing de Fer",
+    "90": "Soin Poison",
+    "91": "Adaptabilité",
+    "92": "Multi-Coups",
+    "93": "Hydratation",
+    "94": "Force Soleil",
+    "95": "Pied Véloce",
+    "96": "Normalise",
+    "97": "Sniper",
+    "98": "Garde Magik",
+    "99": "Annule Garde",
+    "100": "Frein",
+    "101": "Technicien",
+    "102": "Feuille Garde",
+    "103": "Maladresse",
+    "104": "Brise Moule",
+    "105": "Chanceux",
+    "106": "Boom Final",
+    "107": "Anticipation",
+    "108": "Prédiction",
+    "109": "Inconscient",
+    "110": "Lentiteintée",
+    "111": "Filtre",
+    "112": "Début Calme",
+    "113": "Querelleur",
+    "114": "Lavabo",
+    "115": "Corps Gel",
+    "116": "Solide Roc",
+    "117": "Alerte Neige",
+    "118": "Cherche Miel",
+    "119": "Fouille",
+    "120": "Téméraire",
+    "121": "Multi-Type",
+    "122": "Don Floral",
+    "123": "Mauvais Rêve",
+    "124": "Pickpocket",
+    "125": "Sans Limite",
+    "126": "Contestation",
+    "127": "Tension",
+    "128": "Acharné",
+    "129": "Défaitiste",
+    "130": "Corps Maudit",
+    "131": "Cœur Soin",
+    "132": "Garde-Ami",
+    "133": "Armurouillée",
+    "134": "Heavy Metal",
+    "135": "Light Metal",
+    "136": "Multiécaille",
+    "137": "Rage Poison",
+    "138": "Rage Brûlure",
+    "139": "Récolte",
+    "140": "Télépathe",
+    "141": "Lunatique",
+    "142": "Envelocape",
+    "143": "Toxitouche",
+    "144": "Régé-Force",
+    "145": "Cœur de Coq",
+    "146": "Baigne Sable",
+    "147": "Peau Miracle",
+    "148": "Analyste",
+    "149": "Illusion",
+    "150": "Imposteur",
+    "151": "Infiltration",
+    "152": "Momie",
+    "153": "Impudence",
+    "154": "Cœur Noble",
+    "155": "Phobique",
+    "156": "Miroir Magik",
+    "157": "Herbivore",
+    "158": "Farceur",
+    "159": "Force Sable",
+    "160": "Épine de Fer",
+    "161": "Mode Transe",
+    "162": "Victorieux",
+    "163": "Turbo Brasier",
+    "164": "Téra-Voltage",
+    "165": "Aroma-Voile",
+    "166": "Flora-Voile",
+    "167": "Bajoues",
+    "168": "Protéen",
+    "169": "Toison Épaisse",
+    "170": "Magicien",
+    "171": "Pare-Balles",
+    "172": "Battant",
+    "173": "Prognathe",
+    "174": "Peau Gelée",
+    "175": "Gluco-Voile",
+    "176": "Déclic Tactique",
+    "177": "Ailes Bourrasque",
+    "178": "Méga Blaster",
+    "179": "Toison Herbue",
+    "180": "Symbiose",
+    "181": "Griffe Dure",
+    "182": "Peau Féérique",
+    "183": "Poisseux",
+    "184": "Peau Céleste",
+    "185": "Amour Filial",
+    "186": "Aura Ténébreuse",
+    "187": "Aura Féérique",
+    "188": "Aura Inversée",
+    "189": "Mer Primaire",
+    "190": "Terre Finale",
+    "191": "Souffle Delta",
+    "192": "Endurance",
+    "193": "Escampette",
+    "194": "Repli Tactique",
+    "195": "Sable Humide",
+    "196": "Cruauté",
+    "197": "Bouclier-Carcan",
+    "198": "Filature",
+    "199": "Aquabulle",
+    "200": "Expert Acier",
+    "201": "Dracolère",
+    "202": "Chasse-Neige",
+    "203": "Longue Portée",
+    "204": "Hydrata-Son",
+    "205": "Prioguérison",
+    "206": "Peau Électrique",
+    "207": "Surf Caudal",
+    "208": "Banc",
+    "209": "Fantômasque",
+    "210": "Synergie",
+    "211": "Rassemblement",
+    "212": "Corrosion",
+    "213": "Hypersommeil",
+    "214": "Prestance Royale",
+    "215": "Expuls’Organes",
+    "216": "Danseuse",
+    "217": "Batterie",
+    "218": "Boule de Poils",
+    "219": "Corps Coloré",
+    "220": "Animacœur",
+    "221": "Mèche Rebelle",
+    "222": "Receveur",
+    "223": "Osmose",
+    "224": "Boost Chimère",
+    "225": "Système Alpha",
+    "226": "Créa-Élec",
+    "227": "Créa-Psy",
+    "228": "Créa-Brume",
+    "229": "Créa-Herbe",
+    "230": "Métallo-Garde",
+    "231": "Spectro-Bouclier",
+    "232": "Prisme-Armure",
+    "233": "Cérébro-Force",
+    "234": "Lame Indomptable",
+    "235": "Égide Inflexible",
+    "236": "Libéro",
+    "237": "Ramasse Ball",
+    "238": "Effilochage",
+    "239": "Propulseur",
+    "240": "Armure Miroir",
+    "241": "Dégobage",
+    "242": "Nerfs d’Acier",
+    "243": "Turbine",
+    "244": "Punk Rock",
+    "245": "Expul’Sable",
+    "246": "Écailles Glacées",
+    "247": "Mûrissement",
+    "248": "Tête de Gel",
+    "249": "Cercle d’Énergie",
+    "250": "Mimétisme",
+    "251": "Brise-Barrière",
+    "252": "Boost Acier",
+    "253": "Corps Condamné",
+    "254": "Âme Vagabonde",
+    "255": "Entêtement",
+    "256": "Gaz Inhibiteur",
+    "257": "Voile Pastel",
+    "258": "Déclic Fringale"
   }
 }
