--- a/CaptureSight/romfs/i18n/fr.json
+++ b/CaptureSight/romfs/i18n/fr.json
@@ -31,7 +31,8 @@
     "Frame": "Frame",
     "No raid seed found!  This may not be a raid Pokemon": "Aucune Raid Seed n'a été trouvée ! Ce n'est peut-être pas un Pokemon de Raid",
     "Flawless IVs": "IVs Parfaits",
-    "Voir les prochaines frames (A)": "View upcoming frames (A)"
+    "View upcoming frames (A)": "Voir les prochaines frames (A)",
+    "Ability": "Talent"
   },
   "natures": {
     "0": "Hardi",
