Fix consistency in naming

--- a/CaptureSight/romfs/i18n/fr.json
+++ b/CaptureSight/romfs/i18n/fr.json
@@ -1753,7 +1753,7 @@
     "889": "Zamazenta",
     "890": "Éthernatos"
   },
-  "ability": {
+  "abilities": {
     "0": "-",
     "1": "Puanteur",
     "2": "Crachin",
