--- a/CaptureSight/romfs/i18n/en.json
+++ b/CaptureSight/romfs/i18n/en.json
@@ -32,7 +32,8 @@
     "No raid seed found!  This may not be a raid Pokemon": "No raid seed found!  This may not be a raid Pokemon",
     "Flawless IVs": "Flawless IVs",
     "View upcoming frames (A)": "View upcoming frames (A)",
-    "Ability": "Ability"
+    "Ability": "Ability",
+    "Empty": "Empty"
   },
   "natures": {
     "0": "Hardy",
