Show event label for event dens

--- a/CaptureSight/romfs/i18n/chs.json
+++ b/CaptureSight/romfs/i18n/chs.json
@@ -33,7 +33,8 @@
     "Flawless IVs": "完美个体",
     "View upcoming frames (A)": "查看后续帧 (按A)",
     "Ability": "特性",
-    "Empty": "无"
+    "Empty": "无",
+    "Event": "活动"
   },
   "natures": {
     "Hardy": "勤奋",
