--- a/CaptureSight/romfs/i18n/cht.json
+++ b/CaptureSight/romfs/i18n/cht.json
@@ -33,7 +33,8 @@
     "Flawless IVs": "完美個體",
     "View upcoming frames (A)": "查看後續幀 (按A)",
     "Ability": "特性",
-    "Empty": "無"
+    "Empty": "無",
+    "Event": "活动"
   },
   "natures": {
     "Hardy": "勤奮",
