--- a/CaptureSight/romfs/i18n/fr.json
+++ b/CaptureSight/romfs/i18n/fr.json
@@ -33,7 +33,8 @@
     "Flawless IVs": "IVs Parfaits",
     "View upcoming frames (A)": "Voir les prochaines frames (A)",
     "Ability": "Talent",
-    "Empty": "Vide"
+    "Empty": "Vide",
+    "Event": "Evénement"
   },
   "natures": {
     "Hardy": "Hardi",
