--- a/CaptureSight/romfs/i18n/fr.json
+++ b/CaptureSight/romfs/i18n/fr.json
@@ -17,7 +17,8 @@
     "Active Den List": "Liste des Antres actifs",
     "All Dens List": "Liste de tous les antres",
     "Stars": "Étoiles",
-    "More detail (X), Go back (B)\nRaid Searcher (Y)": "Plus d'informations (X), Retour (B)\nRecherche de Raid (Y)",
+    "More detail (X)": "Plus d'informations (X)",
+    "Raid Searcher (Y)": "Recherche de Raid (Y)",
     "Den Id": "ID de l'Antre",
     "Wild and Trade Pokemon": "Pokémon sauvage et échangé",
     "Trade Pokemon": "Pokemon à l'échange",
@@ -34,7 +35,15 @@
     "View upcoming frames (A)": "Voir les prochaines frames (A)",
     "Ability": "Talent",
     "Empty": "Vide",
-    "Event": "Evénement"
+    "Event": "Evénement",
+    "HP": "HP",
+    "ATK": "ATK",
+    "DEF": "DEF",
+    "SPA": "SPA",
+    "SPD": "SPD",
+    "SPE": "SPE",
+    "Switch (A)": "Switch (A)",
+    "Hide detail (X)": "Hide detail (X)"
   },
   "natures": {
     "Hardy": "Hardi",
