Update Chinese translations (thanks @wwwwwwzx!)

--- a/CaptureSight/romfs/i18n/chs.json
+++ b/CaptureSight/romfs/i18n/chs.json
@@ -37,13 +37,23 @@
     "Empty": "无",
     "Event": "活动",
     "HP": "HP",
-    "ATK": "ATK",
-    "DEF": "DEF",
-    "SPA": "SPA",
-    "SPD": "SPD",
-    "SPE": "SPE",
-    "Switch (A)": "Switch (A)",
-    "Hide detail (X)": "Hide detail (X)"
+    "ATK": "攻击",
+    "DEF": "防御",
+    "SPA": "特攻",
+    "SPD": "特防",
+    "SPE": "速度",
+    "Switch (A)": "切换(A)",
+    "Hide detail (X)": "隐藏详细(X)",
+    "Shiny filter": "筛选异色",
+    "Flawless IV filter": "筛选完美个体",
+    "Star": "星星",
+    "Square": "方块",
+    "Star or square": "星或方块",
+    "(A) or (B) to apply filters, (L) and (R) to change filters": "(A)或(B)使用筛选,(L)和(R)切换筛选",
+    "(A) to apply filters": "(A)使用筛选",
+    "Advance": "前进",
+    "Calculating seed": "计算seed",
+    "Raid Search Settings": "团体战检索设置"
   },
   "natures": {
     "Hardy": "勤奋",
