--- a/CaptureSight/romfs/i18n/cht.json
+++ b/CaptureSight/romfs/i18n/cht.json
@@ -37,13 +37,23 @@
     "Empty": "無",
     "Event": "活动",
     "HP": "HP",
-    "ATK": "ATK",
-    "DEF": "DEF",
-    "SPA": "SPA",
-    "SPD": "SPD",
-    "SPE": "SPE",
-    "Switch (A)": "Switch (A)",
-    "Hide detail (X)": "Hide detail (X)"
+    "ATK": "攻擊",
+    "DEF": "防禦",
+    "SPA": "特攻",
+    "SPD": "特防",
+    "SPE": "速度",
+    "Switch (A)": "切換(A)",
+    "Hide detail (X)": "隱藏詳細(X)",
+    "Shiny filter": "篩選異色",
+    "Flawless IV filter": "篩選完美個體",
+    "Star": "星星",
+    "Square": "方塊",
+    "Star or square": "星或方塊",
+    "(A) or (B) to apply filters, (L) and (R) to change filters": "(A)或(B)使用篩選,(L)和(R)切換篩選",
+    "(A) to apply filters": "(A)使用篩選",
+    "Advance": "前進",
+    "Calculating seed": "計算seed",
+    "Raid Search Settings": "團體戰檢索設置"
   },
   "natures": {
     "Hardy": "勤奮",
